[gd_scene load_steps=5 format=2]

[ext_resource path="res://models/livingroom/chess_board.tscn" type="PackedScene" id=1]
[ext_resource path="res://zooms/livingroom_chessBoard.gd" type="Script" id=2]
[ext_resource path="res://models/livingroom/tableCoffee.tscn" type="PackedScene" id=3]
[ext_resource path="res://common/gamePad/navigation.tscn" type="PackedScene" id=4]

[node name="livingroom_chessBoard" type="Spatial"]
script = ExtResource( 2 )

[node name="chess_board" parent="." instance=ExtResource( 1 )]
transform = Transform( -4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, -7.38655, 0, 1.07933 )

[node name="tableCoffee" parent="." instance=ExtResource( 3 )]
transform = Transform( -5.68709e-06, 0, -130.106, 0, 3, 0, 130.106, 0, -5.68709e-06, -1.65612, -1.06323, 7.83932 )

[node name="ARVROrigin" type="ARVROrigin" parent="."]
transform = Transform( -0.187043, -0.885292, 0.425761, -0.129326, 0.451829, 0.88268, -0.973802, 0.110037, -0.199003, -2.54074, 9.52356, -0.257725 )

[node name="ARVRCamera" type="ARVRCamera" parent="ARVROrigin"]

[node name="navigation" parent="." instance=ExtResource( 4 )]
displayLeftJoystick = true
displayButtonB = true
[connection signal="movePlayer" from="navigation" to="." method="_on_navigation_movePlayer"]
[connection signal="pushButtonB" from="navigation" to="." method="_on_navigation_pushButtonB"]
